Bring all versions to the same level so we test the version that a Chronicle ALL jar uses